; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/mediatek/extr_clk-pll.c_mtk_pll_round_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/mediatek/extr_clk-pll.c_mtk_pll_round_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.mtk_clk_pll = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk_hw*, i64, i64*)* @mtk_pll_round_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mtk_pll_round_rate(%struct.clk_hw* %0, i64 %1, i64* %2) #0 {
  %4 = alloca %struct.clk_hw*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca %struct.mtk_clk_pll*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.clk_hw* %0, %struct.clk_hw** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64* %2, i64** %6, align 8
  %10 = load %struct.clk_hw*, %struct.clk_hw** %4, align 8
  %11 = call %struct.mtk_clk_pll* @to_mtk_clk_pll(%struct.clk_hw* %10)
  store %struct.mtk_clk_pll* %11, %struct.mtk_clk_pll** %7, align 8
  store i32 0, i32* %8, align 4
  %12 = load %struct.mtk_clk_pll*, %struct.mtk_clk_pll** %7, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i64*, i64** %6, align 8
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @mtk_pll_calc_values(%struct.mtk_clk_pll* %12, i32* %8, i32* %9, i64 %13, i64 %15)
  %17 = load %struct.mtk_clk_pll*, %struct.mtk_clk_pll** %7, align 8
  %18 = load i64*, i64** %6, align 8
  %19 = load i64, i64* %18, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i64 @__mtk_pll_recalc_rate(%struct.mtk_clk_pll* %17, i64 %19, i32 %20, i32 %21)
  ret i64 %22
}

declare dso_local %struct.mtk_clk_pll* @to_mtk_clk_pll(%struct.clk_hw*) #1

declare dso_local i32 @mtk_pll_calc_values(%struct.mtk_clk_pll*, i32*, i32*, i64, i64) #1

declare dso_local i64 @__mtk_pll_recalc_rate(%struct.mtk_clk_pll*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
